Fixed spacing on home page, started updating spotdetails to show words then numbers

--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -5,6 +5,10 @@
     justify-content: space-between;
 }
 
+.intro{
+    padding-bottom: 5%;
+}
+
 .button-container{
     padding-bottom: 5%;
     padding-top:5%;
